--- a/Maui.eCommerce/Views/InventoryManagementView.xaml
+++ b/Maui.eCommerce/Views/InventoryManagementView.xaml
@@ -10,11 +10,30 @@
             HorizontalOptions="Center" />
 
         <ListView
-            ItemsSource="{Binding }"/>
+            ItemsSource="{Binding Path=Products}"
+            SelectedItem="{Binding ProductSelected}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Text="{Binding Display}"/>
+                            <Button Grid.Column="1" Text="Edit"/>
+                            <Button Grid.Column="2" Text="Delete"/>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
         <Button
-                Clicked="AddClicked"/>
+            Text="Add Item"
+            Clicked="AddClicked"/>
         <Button
-             Text="Update Item"
+             Text="Edit Item"
              Clicked="UpdateClicked"/>
         <Button
             Text="Delete Item"
